# DeepFlight

./: .gitattributes  .gitignore  .gitmodules  DeepFlight_PostMan_Tests.postman_collection.json  README.md
GameAPI/: Dockerfile  pom.xml  run.sh  startContainer.sh
Prometheus/: prometheus.yml
TUI/: pom.xml  start.bat
TUI/program/: start.sh
TrackGenerator/: CMakeLists.txt  dbconnection.c  dbconnection.h  generation.c  generation.h  main.c  planet.h  track.c  trackdata.c  trackdata_test.c  trackdata_test.h
TrackGenerator/generation/: generation.c  generation.h  genparams.h  trackdata.c  trackdata.h  trackdata_test.c  trackdata_test.h
TrackGenerator/model/: planet.c  planet.h  track.c  track.h
TrackGenerator/networking/: dbconnection.h
UniverseUpdater/: DatabaseTest.py  Dockerfile  README.md  requirements.txt  requirementsOLD.txt  run.sh  startContainer.sh
UniverseUpdater/source/: DatabaseController.py  database.py  databaseDAO.py  databaseStartUp.py  generate.py  generatedtrack.dftbd  main.py  ranker.py  track.py
UniverseUpdater/test/: DatabaseTest.py  generatedtrack.dftbd  rankingtest.py  testtrack.dftbd
UserAPI/: Dockerfile  Manifest.txt  TEMPORARY  pom.xml  run copy.sh  run.sh  startContainer.sh
WebSite/: Dockerfile.PRODUCTION  Dockerfile.development  package-lock.json  package.json  run-dockerbuild-PRODUCTION.sh  run-dockerbuild-dev.sh  run.sh  simple_serve_deployment.sh  startContainer.sh
WebSite/deep-flight/: Dockerfile.PRODUCTION  package-lock.json  package.json
WebSite/public/: index.html
WebSite/src/: About.js  Download.js  Home.js  (+9 more)
(+90 files in other folders)
